--- a/src/main/resources/message_ru.properties
+++ b/src/main/resources/message_ru.properties
@@ -58,3 +58,4 @@ user_id=ИД Пользователя
 user_registration=Регистрация пользователя
 username=Имя пользователя:
 welcome=Добро пожаловать
+view=Просмотр
